Updated Expense Module

--- a/src/app/modules/expense/expense-management/expense-management.component.html
+++ b/src/app/modules/expense/expense-management/expense-management.component.html
@@ -1,4 +1,5 @@
-<ngx-componentsheader
+<ng-template [ngIf]="!showModal">
+  <ngx-componentsheader
   pageName="Expense Management"
   [requiredButton]="topActionButtons"
   (buttonClick)="pageActionClicked($event)"
@@ -25,13 +26,168 @@
     (pageChange)="loadNewPage($event)"
   ></ngx-tablecomponent>
 </div>
-<ngx-side-modal [(show)]="showModal" [isPage]="true">
-  <div modal-header>Add project</div>
+</ng-template>
+
+<div *ngIf="showModal && selectedTab === TABS.PROJECTS">
+  <div modal-header>Add Project</div>
+  <form *ngIf="uploadType =='manual'" #projectForm="ngForm" name="projectForm">
+    <div modal-body>
+      <div class="my-form">
+        <h4>Add Manually</h4>
+
+        <div class="form-group row">
+          <label class="col-sm-3" for="Name" class="col-sm-3">Name</label>
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <input type="text" class="form-control" placeholder="Name" name="name" #name="ngModel" [(ngModel)]="allProjects.name">
+          </div>
+          <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
+            <div *ngIf="name.errors.required">Name is required</div>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-3" for="Start Date">Start Date:</label>
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <ngx-date [max]="allProjects.endDate" [(value)]="allProjects.startDate"></ngx-date>
+          </div>
+        </div>
+
+      <div class="form-group row">
+          <label class="col-sm-3" for="End Date">End Date:</label>
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <ngx-date [(value)]="allProjects.endDate" [min]="allProjects.startDate"></ngx-date>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-3">Description</label>
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <ngx-wysisyg-input [(value)]="allProjects.description"></ngx-wysisyg-input>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+      <div  class="col-sm-6 col-md-6 col-lg-6">
+        <button nbButton status="primary" (click)="createProject()">Save</button>
+        <span style="padding: 8px;"></span>
+        <button nbButton style="color: #4847E0;">Cancel</button>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+      <div  class="col-sm-6 col-md-6 col-lg-6">
+        <button nbButton style="color: #4847E0;" (click)="changeUploadType('bulk')">Upload Excel Instead</button>
+      </div>
+    </div>
+  </form>
+
+  <form *ngIf="uploadType =='bulk'">
+    <div class="form-group row mydiv">
+      <label for="website" class="col-sm-3 col-form-label mylabel">Upload Excel Document</label>
+
+      <ngx-file-upload></ngx-file-upload>
+
+      <div class="col-md-4 col-lg-4 col-sm-4">
+        <i class="fa fa-download" style="color: #4847E0; padding: 10px;" aria-hidden="true"></i>
+        <span style="color: #4847E0; padding: 10px;" >Download Template</span>
+      </div>
+    </div>
+
+        <div class="form-group row">
+          <label for="save" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+          <div class="col-md-4 col-lg-4 col-sm-4" style="padding-left: 0px;">
+            <button nbButton status="primary">Save</button>
+            <div style="padding: 10px 10px 10px 0px;"><span>
+              <a (click)="changeUploadType('manual')" style="cursor: pointer; color: #4847E0; text-decoration: underline;">Add Project Manually</a></span></div>
+
+          </div>
+        </div>
+      </form>
+</div>
+
+<div *ngIf="showModal && selectedTab === TABS.TYPES">
+  <div modal-header>Add Expense Type</div>
+<form *ngIf="uploadType =='manual'" #expenseTypeForm="ngForm" name="expenseTypeForm">
   <div modal-body>
-    
+    <div class="my-form">
+      <h4>Add Manually</h4>
+
+      <div class="form-group row">
+        <label class="col-sm-3">Budget code<span style="font-weight: 300">(optional)</span></label>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <input type="text" class="form-control" placeholder="Budget Code" name="projectCode" #projectCode="ngModel" [(ngModel)]="myexpenseType.code">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="Name" class="col-sm-3">Name</label>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <input type="text" class="form-control" placeholder="Name" name="name" #name="ngModel" [(ngModel)]="myexpenseType.name">
+        </div>
+        <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
+          <div *ngIf="name.errors.required">Name is required</div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-3">Sub-type<span style="font-weight: 300">(optional)</span></label>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <input type="text" class="form-control" placeholder="Sub-Type" name="subType" #subType="ngModel" [(ngModel)]="myexpenseType.subID">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-3">Description</label>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <ngx-wysisyg-input [(value)]="myexpenseType.description"></ngx-wysisyg-input>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="form-group row">
+    <label class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+    <div  class="col-sm-6 col-md-6 col-lg-6">
+      <button nbButton status="primary" (click)="createTypes()">Save</button>
+      <span style="padding: 8px;"></span>
+      <button nbButton style="color: #4847E0;">Cancel</button>
+    </div>
   </div>
 
-  <div modal-actions>
-    <button nbButton status="primary">save</button>
+  <div class="form-group row">
+    <label class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+    <div  class="col-sm-6 col-md-6 col-lg-6">
+      <button nbButton style="color: #4847E0;" (click)="changeUploadType('bulk')" #bulk>Upload Excel Instead</button>
+    </div>
   </div>
-</ngx-side-modal>
+</form>
+
+<form *ngIf="uploadType =='bulk'">
+      <div class="form-group row mydiv">
+        <label for="website" class="col-sm-3 col-form-label mylabel">Upload Excel Document</label>
+
+        <ngx-file-upload></ngx-file-upload>
+
+        <div class="col-md-4 col-lg-4 col-sm-4">
+          <i class="fa fa-download" style="color: #4847E0; padding: 10px;" aria-hidden="true"></i>
+          <span style="color: #4847E0; padding: 10px;" >Download Template</span>
+        </div>
+      </div>
+
+          <div class="form-group row">
+            <label for="save" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+            <div class="col-md-4 col-lg-4 col-sm-4" style="padding-left: 0px;">
+              <button nbButton status="primary" (click)="uploadVendor()">Save</button>
+              <div style="padding: 10px 10px 10px 0px;"><span>
+                <a (click)="changeUploadType('manually')" style="cursor: pointer; color: #4847E0; text-decoration: underline;">Add Expense Type Manually</a></span></div>
+
+            </div>
+          </div>
+        </form>
+</div>
+
+
