--- a/src/app/modules/career-succession/testpool/testpool.component.html
+++ b/src/app/modules/career-succession/testpool/testpool.component.html
@@ -1,11 +1,24 @@
-<ngx-componentsheader *ngIf="newCandidate" [requiredButton]="[{name:'plan', label:'Add Candidate', icon: 'plus'}]" (buttonClick)="addCandidate()" pageName='Roles'></ngx-componentsheader>
+<ngx-componentsheader *ngIf="newCandidate" [requiredButton]="[{name:'plan', label:'Add Candidate', icon: 'plus'}]" (buttonClick)="addCandidate()" [pageName]="pageTitle"></ngx-componentsheader>
 <ngx-componentsheader *ngIf="!newCandidate" pageName='Add Candidate'></ngx-componentsheader>
 <div *ngIf="newCandidate" style="display: flex; flex-direction: row; justify-content: flex-start; flex: auto; padding-bottom: 5px;">
-  <span><i class="far fa-arrow-alt-circle-left"></i><a (click)="goback()" style="margin-left: 3px;">Back</a></span>
+  <span style="cursor: pointer;"><i class="far fa-arrow-alt-circle-left"></i><a (click)="goback()" style="margin-left: 3px; ">Back</a></span>
 </div>
-<nb-card *ngIf="newCandidate">
-  <ngx-tableheader></ngx-tableheader>
-  <ngx-tablecomponent  [tableColum]="testPoolTable"></ngx-tablecomponent>
+<nb-card *ngIf="newCandidate" style="padding: 5px;">
+  <nb-tabset>
+    <nb-tab tabTitle="Employee Database">
+      <ngx-tableheader></ngx-tableheader>
+      <ngx-tablecomponent  [tableColum]="testPoolTable"></ngx-tablecomponent>
+    </nb-tab>
+    <nb-tab tabTitle="Recruitment Portal">
+      <ngx-tableheader></ngx-tableheader>
+      <ngx-tablecomponent  [tableColum]="testPoolTable"></ngx-tablecomponent>
+    </nb-tab>
+
+    <nb-tab tabTitle="External Source">
+      <ngx-tableheader></ngx-tableheader>
+      <ngx-tablecomponent  [tableColum]="testPoolTable"></ngx-tablecomponent>
+    </nb-tab>
+   </nb-tabset>
 </nb-card>
 
 
@@ -28,7 +41,10 @@
       <div class="form-group row mydiv">
         <label for="Department" class="col-sm-3 col-form-label mylabel">Name</label>
         <div class="col-sm-6 col-md-6 col-lg-6">
-          <input type="email" class="form-control" name="name" placeholder="johndoe@gmail.com">
+          <input type="text" class="form-control" name="name" #name="ngModel" [(ngModel)]="candidateModel.name" placeholder="Philip Muyiwa" required>
+          <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
+            <div *ngIf="name.errors.required">Name is required</div>
+          </div>
         </div>
       </div>
 
@@ -36,48 +52,55 @@
         <label for="Country" class="col-sm-3 col-form-label mylabel">Department</label>
         <div class="col-sm-6 col-md-6 col-lg-6">
           <!-- <ngx-employee-master-search></ngx-employee-master-search> -->
-          <select class="custom-select" required>
+          <select class="custom-select" name="department" #department="ngModel" [(ngModel)]="candidateModel.department" required>
             <option value="">Select </option>
             <option value="1">Employee Database</option>
             <option value="2">Recruitment Porta;</option>
             <option value="3">External Source</option>
           </select>
+          <div *ngIf="department.invalid && (department.dirty || department.touched)" class="error">
+            <div *ngIf="department.errors.required">Department is required</div>
+          </div>
         </div>
       </div>
 
       <div class="form-group row mydiv">
         <label for="Country" class="col-sm-3 col-form-label mylabel">Unit/Division</label>
         <div class="col-sm-6 col-md-6 col-lg-6">
-          <select class="custom-select" required>
+          <select class="custom-select" name="unit" #unit="ngModel" [(ngModel)]="candidateModel.unit" required>
             <option value="">Select </option>
             <option value="1">Employee Database</option>
             <option value="2">Recruitment Porta;</option>
             <option value="3">External Source</option>
           </select>
+          <div *ngIf="unit.invalid && (unit.dirty || unit.touched)" class="error">
+            <div *ngIf="unit.errors.required">Type is required</div>
+          </div>
         </div>
       </div>
 
       <div class="form-group row mydiv">
-        <label for="Country" class="col-sm-3 col-form-label mylabel">Position</label>
+        <label for="Position" class="col-sm-3 col-form-label mylabel">Position</label>
         <div class="col-sm-6 col-md-6 col-lg-6">
-          <select class="custom-select" required>
+          <select class="custom-select" name="position" #position="ngModel" [(ngModel)]="candidateModel.position"  required>
             <option value="">Select </option>
             <option value="1">Employee Database</option>
             <option value="2">Recruitment Porta;</option>
             <option value="3">External Source</option>
           </select>
+          <div *ngIf="position.invalid && (position.dirty || position.touched)" class="error">
+            <div *ngIf="position.errors.required">Position is required</div>
+          </div>
         </div>
       </div>
 
       <div class="form-group row mydiv">
-        <label for="Country" class="col-sm-3 col-form-label mylabel">Purpose</label>
+        <label for="Purpose" class="col-sm-3 col-form-label mylabel">Purpose</label>
         <div class="col-sm-6 col-md-6 col-lg-6">
-          <select class="custom-select" required>
-            <option value="">Select </option>
-            <option value="1">Employee Database</option>
-            <option value="2">Recruitment Porta;</option>
-            <option value="3">External Source</option>
-          </select>
+          <input class="custom-select" name="purpose" #purpose="ngModel" [(ngModel)]="candidateModel.purpose" required>
+          <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="error">
+            <div *ngIf="purpose.errors.required">Purpose is required</div>
+          </div>
         </div>
       </div>
      </div>
@@ -90,33 +113,40 @@
           <label for="Name" class="col-sm-3 col-form-label mylabel">Name</label>
           <div class="col-sm-6 col-md-6 col-lg-6">
             <!-- <ngx-employee-master-search></ngx-employee-master-search> -->
-            <input type="text" class="form-control" name="name" placeholder="John Doe">
+            <input type="text" class="form-control" name="name" #name="ngModel" [(ngModel)]="candidateModel.department" placeholder="John Doe" required>
+            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
+              <div *ngIf="name.errors.required">Name is required</div>
+            </div>
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="Country" class="col-sm-3 col-form-label mylabel">Email</label>
           <div class="col-sm-6 col-md-6 col-lg-6">
-              <input type="email" class="form-control" name="email" placeholder="johndoe@gmail.com">
+              <input type="email" class="form-control" name="email" #email="ngModel" [(ngModel)]="candidateModel.email" placeholder="johndoe@gmail.com" required>
+              <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
+                <div *ngIf="email.errors.required">Email is required</div>
+              </div>
             </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="Phone" class="col-sm-3 col-form-label mylabel">Phone</label>
           <div class="col-sm-6 col-md-6 col-lg-6">
-              <input type="tel" class="form-control" name="phone" placeholder="090-000-000-00">
+              <input type="tel" class="form-control" name="phone" #phone="ngModel" [(ngModel)]="candidateModel.phone" placeholder="090-000-000-00" required>
+              <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="error">
+                <div *ngIf="phone.errors.required">Phone is required</div>
+              </div>
             </div>
         </div>
 
         <div class="form-group row mydiv">
-          <label for="Country" class="col-sm-3 col-form-label mylabel">Purpose</label>
+          <label for="Purpose" class="col-sm-3 col-form-label mylabel">Purpose</label>
           <div class="col-sm-6 col-md-6 col-lg-6">
-            <select class="custom-select" required>
-              <option value="">Select </option>
-              <option value="1">Employee Database</option>
-              <option value="2">Recruitment Porta;</option>
-              <option value="3">External Source</option>
-            </select>
+            <input class="custom-select" name="purpose" #purpose="ngModel" [(ngModel)]="candidateModel.purpose" required>
+            <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="error">
+              <div *ngIf="purpose.errors.required">Purpose is required</div>
+            </div>
           </div>
         </div>
  </div>
@@ -126,50 +156,62 @@
 
   <div *ngIf="selectedChannel == 'external'">
     <div class="form-group row mydiv">
-      <label for="Department" class="col-sm-3 col-form-label mylabel">Name</label>
+      <label for="Name" class="col-sm-3 col-form-label mylabel">Name</label>
       <div class="col-sm-6 col-md-6 col-lg-6">
-        <input type="email" class="form-control" id="jobTitle" placeholder="johndoe@gmail.com">
+        <input type="text" class="form-control" name="name" #name="ngModel" [(ngModel)]="candidateModel.name" placeholder="John Doe" required>
+        <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
+          <div *ngIf="name.errors.required">Name is required</div>
+        </div>
       </div>
     </div>
 
     <div class="form-group row mydiv">
-      <label for="Country" class="col-sm-3 col-form-label mylabel">Email</label>
+      <label for="Email" class="col-sm-3 col-form-label mylabel">Email</label>
       <div class="col-sm-6 col-md-6 col-lg-6">
-          <input type="email" class="form-control" name="email" placeholder="johndoe@gmail.com">
+          <input type="email" class="form-control" name="email" #email="ngModel" [(ngModel)]="candidateModel.email" placeholder="johndoe@gmail.com" required>
+          <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
+            <div *ngIf="email.errors.required">Email is required</div>
+          </div>
         </div>
       </div>
-
 
     <div class="form-group row mydiv">
       <label for="Phone" class="col-sm-3 col-form-label mylabel">Phone</label>
       <div class="col-sm-6 col-md-6 col-lg-6">
-          <input type="tel" class="form-control" name="phone" placeholder="090-000-000-00">
+          <input type="tel" class="form-control" name="phone" #phone="ngModel" [(ngModel)]="candidateModel.phone" placeholder="090-000-000-00" required>
+          <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="error">
+            <div *ngIf="phone.errors.required">Phone is required</div>
+          </div>
         </div>
     </div>
 
     <div class="form-group row mydiv">
       <label for="Website" class="col-sm-3 col-form-label mylabel">Website</label>
       <div class="col-sm-6 col-md-6 col-lg-6">
-        <input type="url" class="form-control" name="website" placeholder="Enter Website">
+        <input type="url" class="form-control" name="website" #website="ngModel" [(ngModel)]="candidateModel.website" placeholder="Enter Website" required>
+        <div *ngIf="website.invalid && (website.dirty || website.touched)" class="error">
+          <div *ngIf="website.errors.required">Website is required</div>
+        </div>
       </div>
     </div>
 
     <div class="form-group row mydiv">
       <label for="LinkedIn" class="col-sm-3 col-form-label mylabel">LinkedIn</label>
       <div class="col-sm-6 col-md-6 col-lg-6">
-          <input type="url" class="form-control" id="jobTitle" placeholder="LinkedIn URL">
+          <input type="url" class="form-control" name="linkedIn" #linkedIn="ngModel" [(ngModel)]="candidateModel.linkedIn" placeholder="LinkedIn URL" required>
+          <div *ngIf="linkedIn.invalid && (linkedIn.dirty || linkedIn.touched)" class="error">
+            <div *ngIf="linkedIn.errors.required">LinkedIn URL is required</div>
+          </div>
         </div>
     </div>
 
     <div class="form-group row mydiv">
-      <label for="Country" class="col-sm-3 col-form-label mylabel">Purpose</label>
+      <label for="Purpose" class="col-sm-3 col-form-label mylabel">Purpose</label>
       <div class="col-sm-6 col-md-6 col-lg-6">
-        <select class="custom-select" required>
-          <option value="">Select </option>
-          <option value="1">Employee Database</option>
-          <option value="2">Recruitment Porta;</option>
-          <option value="3">External Source</option>
-        </select>
+        <input class="custom-select" name="purpose" #purpose="ngModel" [(ngModel)]="candidateModel.purpose" required>
+        <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="error">
+          <div *ngIf="purpose.errors.required">Purpose is required</div>
+        </div>
       </div>
     </div>
   </div>
@@ -177,7 +219,7 @@
       <div class="form-group row">
         <label for="specialization" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
         <div class="col-sm-6">
-          <button nbButton status="primary">Create Plan</button>
+          <button nbButton status="primary" (click)="addCandidateToPool()">Create Plan</button>
           <span style="padding: 8px;"></span>
           <button nbButton style="color: #4847E0;">Cancel</button>
         </div>
